feature(messages): Add messages funcctionality
