# utils/server.js
@@ -5,27 +5,12 @@ import cors from 'cors';
 import postRoute from '../routes/posts.routes.js'
 import usersRoute from '../routes/users.routes.js'
 import loginRoute from '../routes/auth.routes.js'
+import messagesRoute from "../routes/messages.routes.js"
 import { createRequire } from "module";
 const require = createRequire(import.meta.url);
 const swaggerJSON = require('./../swagger.json')
 
 
-// const options = {
-//     definition: {
-//         openapi: "3.0.0",
-//         info: {
-//             title: "My Brand API",
-//             version: "1.0.0",
-//             description: "Swagger documentation for my brand api"
-//         },
-//         servers: [
-//             {
-//                 url: `http://localhost:${process.env.PORT || 6001}`
-//             }
-//         ],
-//     },
-//     apis: ['./routes/*.js']
-// }
 const specs = swaggerJSDoc(swaggerJSON)
 
 
@@ -38,6 +23,7 @@ export default function createServer() {
     app.use('/documentation', swaggerUI.serve, swaggerUI.setup(specs))
     app.use('/posts', postRoute)
     app.use('/users', usersRoute)
+    app.use('/messages', messagesRoute)
     app.use('/login', loginRoute)
 
 
